--- a/web_app/client/src/app/app.component.html
+++ b/web_app/client/src/app/app.component.html
@@ -1,1 +1,16 @@
-<router-outlet></router-outlet>
+<!-- Side navbar -->
+<app-sidebar></app-sidebar>
+<div class="main-content">
+    <!-- Top navbar -->
+    <app-navbar></app-navbar>
+    <!-- Pages -->
+
+    <!-- Page Content -->
+    <router-outlet></router-outlet>
+
+    <div class="container-fluid">
+        <app-footer></app-footer>
+    </div>
+</div>
+
+
