--- a/web_app/client/src/app/pages/profile/update-profile/update-profile.component.html
+++ b/web_app/client/src/app/pages/profile/update-profile/update-profile.component.html
@@ -127,8 +127,9 @@
                   <div class="col-md-12 ant-col-lg-offset-7">
                     <div class="form-group">
                       <label class="form-control-label" for="input-country">Country</label>
-                      <mat-select-country id="input-country" (onCountrySelected)="setCountry($event)" appearance="outline" [placeHolder]="currentCountry.name">
-                      </mat-select-country>
+                      <select formControlName="country" class="form-control form-control-alternative" id="input-country" name="input-country" data-selected-text-format="count" title="Country" >
+                        <option class="" *ngFor="let item of country|enumToArray">{{item.name}}</option>
+                      </select>
                     </div>
                   </div>
                 </div>
