--- a/web_app/client/src/app/layouts/auth-layout/pages/register/register.component.html
+++ b/web_app/client/src/app/layouts/auth-layout/pages/register/register.component.html
@@ -62,7 +62,7 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
                 </div>
-                <input class="form-control" placeholder="Username" type="text" required ngModel>
+                <input class="form-control" name="username" placeholder="Username" type="text" required ngModel>
               </div>
             </div>
             <div class="form-group">
@@ -70,7 +70,7 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
                 </div>
-                <input class="form-control" placeholder="First Name" type="text" required ngModel>
+                <input class="form-control" name="firstName" placeholder="First Name" type="text" required ngModel>
               </div>
             </div>
             <div class="form-group">
@@ -78,7 +78,7 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
                 </div>
-                <input class="form-control" placeholder="Last Name" type="text" required ngModel>
+                <input class="form-control" name="lastName" placeholder="Last Name" type="text" required ngModel>
               </div>
             </div>
             <div class="form-group">
@@ -86,7 +86,7 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                 </div>
-                <input class="form-control" placeholder="Email" type="email" required ngModel>
+                <input class="form-control" name="email" placeholder="Email" type="email" required ngModel>
               </div>
             </div>
             <div class="form-group">
@@ -94,13 +94,13 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                 </div>
-                <input class="form-control" placeholder="Password" type="password" required ngModel>
+                <input class="form-control" name="password" placeholder="Password" type="password" required ngModel>
               </div>
             </div>
             <div class="row my-4">
               <div class="col-12">
                 <div class="custom-control custom-control-alternative custom-checkbox">
-                  <input class="custom-control-input" id="customCheckRegister" type="checkbox" name="accepted" [(ngModel)]="accepted">
+                  <input class="custom-control-input" id="customCheckRegister" type="checkbox" [(ngModel)]="accepted" name="accepted">
                   <label class="custom-control-label" for="customCheckRegister">
                     <span class="text-muted">I agree with the <a href="#!">Privacy Policy</a></span>
                   </label>
@@ -117,7 +117,7 @@
         <div class="col-6">
         </div>
         <div class="col-6 text-right">
-          <a [routerLink]="'/login'" class="text-light"><small>Already a member ?</small></a>
+          <a [routerLink]="'/auth/login'" class="text-light"><small>Already a member ?</small></a>
         </div>
       </div>
     </div>
