--- a/web_app/client/src/app/pages/profile/update-profile/update-profile.component.html
+++ b/web_app/client/src/app/pages/profile/update-profile/update-profile.component.html
@@ -88,7 +88,7 @@
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-md-12 ant-col-lg-offset-7">
+                  <div class="col-md-12">
                     <div class="form-group">
                       <label class="form-control-label" for="input-birth-date">Birthday</label>
                       <br>
@@ -124,7 +124,7 @@
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-md-12 ant-col-lg-offset-7">
+                  <div class="col-md-12">
                     <div class="form-group">
                       <label class="form-control-label" for="input-country">Country</label>
                       <select formControlName="country" class="form-control form-control-alternative" id="input-country" name="input-country" data-selected-text-format="count" title="Country" >
