--- a/web_app/client/src/app/components/navbar/navbar.component.html
+++ b/web_app/client/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,41 @@
-<nav class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
-  <div class="container-fluid">
+<nav class="navbar navbar-top navbar-expand-md navbar-dark navbar-horizontal" id="navbar-main">
+  <div class="container">
     <!-- Brand -->
-    <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" routerLinkActive="active" [routerLink]="['/dashboard']">{{getTitle()}}</a>
+    <!--<a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" routerLinkActive="active" [routerLink]="['/dashboard']">{{getTitle()}}</a>-->
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link nav-link-icon" routerLinkActive="active" [routerLink]="['/dashboard']">
+            <i class="ni ni-planet"></i>
+            <span class="nav-link-inner--text">Dashboard</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a *ngIf="!isLogged" class="nav-link nav-link-icon" routerLinkActive="active" [routerLink]="['/auth/register']">
+            <i class="ni ni-circle-08"></i>
+            <span class="nav-link-inner--text">Register</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a *ngIf="isLogged" class="nav-link nav-link-icon" routerLinkActive="active" (click)="logout()">
+            <i class="ni ni-user-run"></i>
+            <span class="nav-link-inner--text">Logout</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a *ngIf="!isLogged" class="nav-link nav-link-icon" routerLinkActive="active" [routerLink]="['/auth/login']">
+            <i class="ni ni-key-25"></i>
+            <span class="nav-link-inner--text">Login</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a *ngIf="isLogged" class="nav-link nav-link-icon" routerLinkActive="active" [routerLink]="['/user-profile']">
+            <i class="ni ni-single-02"></i>
+            <span class="nav-link-inner--text">Profile</span>
+          </a>
+        </li>
+      </ul>
+    </div>
     <!-- Form -->
     <form class="navbar-search navbar-search-dark form-inline mr-3 d-none d-md-flex ml-lg-auto">
       <div class="form-group mb-0" [ngClass]="{ 'focused': focus === true }">
@@ -16,14 +50,14 @@
     </form>
     <!-- User -->
     <ul class="navbar-nav align-items-center d-none d-md-flex">
-      <li class="nav-item" ngbDropdown placement="bottom-right">
+      <li *ngIf="isLogged" class="nav-item" ngbDropdown placement="bottom-right">
         <a class="nav-link pr-0" role="button" ngbDropdownToggle>
           <div class="media align-items-center">
             <span class="avatar avatar-sm rounded-circle">
-              <img alt="Image placeholder" src="assets/img/theme/team-4-800x800.jpg">
+              <img id="user_image" alt="Image placeholder" [src]="this.image || 'assets/img/theme/team-4-800x800.jpg'">
             </span>
             <div class="media-body ml-2 d-none d-lg-block">
-              <span class="mb-0 text-sm  font-weight-bold">Jessica Jones</span>
+              <span class="mb-0 text-sm  font-weight-bold">{{currentUser.username }}</span>
             </div>
           </div>
         </a>
@@ -31,13 +65,13 @@
           <div class=" dropdown-header noti-title">
             <h6 class="text-overflow m-0">Welcome!</h6>
           </div>
-          <a routerLinkActive="active" [routerLink]="['/user-profile']" class="dropdown-item">
+          <a routerLinkActive="active" [routerLink]="['/dashboard']" class="dropdown-item">
+            <i class="ni ni-single-02"></i>
+            <span>Template</span>
+          </a>
+          <a *ngIf="connected" routerLinkActive="active" [routerLink]="['/user-profile']" class="dropdown-item">
             <i class="ni ni-single-02"></i>
             <span>My profile</span>
-          </a>
-          <a routerLinkActive="active" [routerLink]="['/user-profile']" class="dropdown-item">
-            <i class="ni ni-settings-gear-65"></i>
-            <span>Settings</span>
           </a>
           <a routerLinkActive="active" [routerLink]="['/user-profile']" class="dropdown-item">
             <i class="ni ni-calendar-grid-58"></i>
@@ -48,7 +82,7 @@
             <span>Support</span>
           </a>
           <div class="dropdown-divider"></div>
-          <a href="#!" class="dropdown-item">
+          <a *ngIf="this.authService.isLogged()" (click)="logout()" class="dropdown-item">
             <i class="ni ni-user-run"></i>
             <span>Logout</span>
           </a>
