--- a/web_app/client/src/app/components/navbar/navbar.component.html
+++ b/web_app/client/src/app/components/navbar/navbar.component.html
@@ -65,21 +65,21 @@
           <div class=" dropdown-header noti-title">
             <h6 class="text-overflow m-0">Welcome!</h6>
           </div>
-          <a routerLinkActive="active" [routerLink]="['/dashboard']" class="dropdown-item">
+          <a *ngIf="currentUser.role.toUpperCase() === 'USER'" routerLinkActive="active" [routerLink]="['/dashboard']" class="dropdown-item">
             <i class="ni ni-single-02"></i>
-            <span>Template</span>
+            <span>Dashboard</span>
+          </a>
+          <a *ngIf="currentUser.role.toUpperCase() === 'ADMIN'" routerLinkActive="active" [routerLink]="['/admin/dashboard']" class="dropdown-item">
+            <i class="ni ni-single-02"></i>
+            <span>Dashboard</span>
           </a>
           <a *ngIf="connected" routerLinkActive="active" [routerLink]="['/user-profile']" class="dropdown-item">
             <i class="ni ni-single-02"></i>
             <span>My profile</span>
           </a>
-          <a routerLinkActive="active" [routerLink]="['/user-profile']" class="dropdown-item">
+          <a *ngIf="currentUser.role.toUpperCase() === 'ADMIN'" routerLinkActive="active" [routerLink]="['/admin/users']" class="dropdown-item">
             <i class="ni ni-calendar-grid-58"></i>
-            <span>Activity</span>
-          </a>
-          <a routerLinkActive="active" [routerLink]="['/user-profile']" class="dropdown-item">
-            <i class="ni ni-support-16"></i>
-            <span>Support</span>
+            <span>Users</span>
           </a>
           <div class="dropdown-divider"></div>
           <a *ngIf="this.authService.isLogged()" (click)="logout()" class="dropdown-item">
