--- a/web_app/client/src/app/layouts/user-layout/pages/subscription/subscription.component.html
+++ b/web_app/client/src/app/layouts/user-layout/pages/subscription/subscription.component.html
@@ -6,7 +6,7 @@
       <div class="row">
         <div class="col-lg-12 col-md-10 ant-col-offset-10">
           <h1 class="display-2 text-white">Hello {{this.currentUser.username}}</h1>
-          <p class="text-white mt-0 mb-5">Here you can subscribe events using contract address, you can also add event topic to make a specific subscription</p>
+          <p class="text-white mt-0 mb-5">Here you can subscribe to events using a blockchain url and a contract address, you can also add event topic to make a specific subscription</p>
         </div>
       </div>
     </div>
@@ -21,13 +21,19 @@
               <h6 class="heading-small text-muted mb-4">Subscription information</h6>
               <div class="pl-lg-4">
                 <div class="row">
-                  <div class="col-lg-6">
+                  <div class="col-lg-4">
+                    <div class="form-group">
+                      <label class="form-control-label" for="input-blockchain-url">Blockchain URL</label>
+                      <input type="text" id="input-blockchain-url" class="form-control form-control-alternative" formControlName="blockchain_url" placeholder="{{this.currentUser?.subscription?.blockchain_url}}" value="{{this.currentUser?.subscription?.blockchain_url}}">
+                    </div>
+                  </div>
+                  <div class="col-lg-4">
                     <div class="form-group">
                       <label class="form-control-label" for="input-contract-address">Contract Address</label>
                       <input type="text" id="input-contract-address" class="form-control form-control-alternative" formControlName="contract_address" placeholder="{{this.currentUser?.subscription?.contract_address}}" value="{{this.currentUser?.subscription?.contract_address}}">
                     </div>
                   </div>
-                  <div class="col-lg-6">
+                  <div class="col-lg-4">
                     <div class="form-group">
                       <label class="form-control-label" for="input-event-topic">Event Topic</label>
                       <input formControlName="event_topic" type="text" id="input-event-topic" class="form-control form-control-alternative" placeholder="{{this.currentUser?.subscription?.event_topic}}" value="{{this.currentUser?.subscription?.event_topic}}">
