--- a/web_app/client/src/app/layouts/user-layout/pages/dashboard/dashboard.component.html
+++ b/web_app/client/src/app/layouts/user-layout/pages/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
     <div class="header-body">
       <!-- Card stats -->
       <div class="row">
-        <div class="col-sm-3">
+        <div class="col-sm-6">
           <div class="card card-stats mb-4 mb-xl-0">
             <div class="card-body">
               <div class="row">
@@ -14,6 +14,42 @@
                 <div class="col-auto">
                   <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
                     <i class="fas fa-chart-bar"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card card-stats mb-4 mb-xl-0">
+            <div class="card-body">
+              <div class="row">
+                <div class="col" *ngIf="this.eventTopicsEmitted">
+                  <h5 class="card-title text-uppercase text-muted mb-0">Blockchain URL</h5>
+                  <span class="h3 font-weight-bold mb-0">{{this.subscribedUsersCount[0]?.blockchain_url}}</span>
+                </div>
+                <div class="col-auto">
+                  <div class="icon icon-shape bg-info text-white rounded-circle shadow">
+                    <i class="fas fa-chart-pie"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="card card-stats mb-4 mb-xl-0">
+            <div class="card-body">
+              <div class="row">
+                <div class="col" *ngIf="this.subscribedUsersCount">
+                  <h5 class="card-title text-uppercase text-muted mb-0">Subscribers Count</h5>
+                  <span class="h2 font-weight-bold mb-0">{{this.subscribedUsersCount[0]?.subscribers_count}}</span>
+                </div>
+                <div class="col-auto">
+                  <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">
+                    <i class="fas fa-users"></i>
                   </div>
                 </div>
               </div>
@@ -37,51 +73,13 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-3">
-          <div class="card card-stats mb-4 mb-xl-0">
-            <div class="card-body">
-              <div class="row">
-                <div class="col" *ngIf="this.subscribedUsersCount">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Subscribers Count</h5>
-                  <span class="h2 font-weight-bold mb-0">{{this.subscribedUsersCount[0]?.subscribers_count}}</span>
-                </div>
-                <div class="col-auto">
-                  <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">
-                    <i class="fas fa-users"></i>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!--<div class="col-xl-3 col-lg-6">
-          <div class="card card-stats mb-4 mb-xl-0">
-            <div class="card-body">
-              <div class="row">
-                <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Performance</h5>
-                  <span class="h2 font-weight-bold mb-0">49,65%</span>
-                </div>
-                <div class="col-auto">
-                  <div class="icon icon-shape bg-info text-white rounded-circle shadow">
-                    <i class="fas fa-percent"></i>
-                  </div>
-                </div>
-              </div>
-              <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-success mr-2"><i class="fas fa-arrow-up"></i> 12%</span>
-                <span class="text-nowrap">Since last month</span>
-              </p>
-            </div>
-          </div>
-        </div>-->
       </div>
     </div>
   </div>
 </div>
-<div class="container-fluid mt--7">
-  <div class="row">
-    <div class="col-sm-12">
+<div class="container-fluid">
+  <div class="row" style="display: flex;justify-content: center;align-items: center">
+    <div class="col-sm-10">
       <div class="chart-container">
         <div class="col">
           <ul class="nav nav-pills justify-content-end">
@@ -99,7 +97,9 @@
             </li>
           </ul>
         </div>    
-        <canvas id="canvas">{{ linechart }}</canvas>    
+        <canvas id="canvas" width="600" height="250">
+          {{ linechart }}
+        </canvas>    
       </div>
     </div>
   </div>
