--- a/web_app/client/src/app/layouts/user-layout/pages/subscription/subscription.component.html
+++ b/web_app/client/src/app/layouts/user-layout/pages/subscription/subscription.component.html
@@ -2,14 +2,12 @@
     <!-- Mask -->
     <span class="mask bg-gradient-danger opacity-8"></span>
     <!-- Header container -->
-    <div class="container-fluid d-flex align-items-center">
-      <div class="row">
-        <div class="col-lg-12 col-md-10 ant-col-offset-10">
-          <h1 class="display-2 text-white">Hello {{this.currentUser.username}}</h1>
-          <p class="text-white mt-0 mb-5">Here you can subscribe to events using a blockchain url and a contract address, you can also add event topic to make a specific subscription</p>
-        </div>
+    <div class="container-fluid d-flex" style="text-align:center">
+      <div class="col-lg-12 col-md-10">
+        <h1 class="display-2 text-white" style="text-align:center">Hello {{this.currentUser.username}}</h1>
+        <h3 class="text-white mt-0 mb-5" style="text-align:center">Here you can subscribe to multiple blockchain events</h3>
       </div>
-    </div>
+  </div>
   </div>
   <div class="container-fluid mt--7">
     <div class="row">
