--- a/web_app/client/src/app/layouts/auth-layout/pages/register/register.component.html
+++ b/web_app/client/src/app/layouts/auth-layout/pages/register/register.component.html
@@ -4,7 +4,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-5 col-md-6">
           <h1 class="text-white">Welcome!</h1>
-          <p class="text-lead text-light">Use these awesome forms to login or create new account in your project for free.</p>
+          <h3 class="text-lead text-light">Please fill in this form in order to create a new account.</h3>
         </div>
       </div>
     </div>
