--- a/web_app/client/src/app/layouts/user-layout/pages/profile/user-profile/user-profile.component.html
+++ b/web_app/client/src/app/layouts/user-layout/pages/profile/user-profile/user-profile.component.html
@@ -2,16 +2,17 @@
   <!-- Mask -->
   <span class="mask bg-gradient-danger opacity-8"></span>
   <!-- Header container -->
-  <div class="container-fluid d-flex align-items-center">
-    <div class="row">
-      <div class="col-lg-12 col-md-10 ant-col-offset-10">
-        <h1 class="display-2 text-white">Hello {{this.currentUser.username}}</h1>
-        <p class="text-white mt-0 mb-5">This is your profile page. You can edit your profile or check your events </p>
-        <a [routerLink]="['/update-profile']" class="btn btn-info">Edit profile</a>
+  <div class="container-fluid d-flex" style="text-align:center">
+      <div class="col-lg-12 col-md-10">
+        <h1 class="display-2 text-white" style="text-align:center">Hello {{this.currentUser.username}}</h1>
+        <h3 class="text-white mt-0 mb-5" style="text-align:center">This is your profile page. You can edit your profile at all times</h3>
+        <div style="text-align:center">
+          <a [routerLink]="['/update-profile']" class="btn btn-info">Edit profile</a>
+        </div>
       </div>
-    </div>
   </div>
 </div>
+
 <div class="container-fluid mt--7">
   <div class="row">
     <div class="col-xl-7 order-xl-2 mb-5 mb-xl-0 ant-col-lg-offset-5">
@@ -28,24 +29,6 @@
         <div class="card-header text-center border-0 pt-8 pt-md-4 pb-0 pb-md-4">
         </div>
         <div class="card-body pt-0 pt-md-4">
-          <div class="row">
-            <div class="col">
-              <div class="card-profile-stats d-flex justify-content-center mt-md-5">
-                <div>
-                  <span class="heading">22</span>
-                  <span class="description">Friends</span>
-                </div>
-                <div>
-                  <span class="heading">10</span>
-                  <span class="description">Photos</span>
-                </div>
-                <div>
-                  <span class="heading">89</span>
-                  <span class="description">Comments</span>
-                </div>
-              </div>
-            </div>
-          </div>
           <div class="text-center">
             <h3>
               {{this.currentUser.username}}<span class="font-weight-light"></span>
@@ -55,10 +38,7 @@
             </div>
             <div class="h5 mt-4">
               <i class="ni ni-email-83 mr-2"></i> {{this.currentUser.email}}
-            <div>
-              <i class="ni education_hat mr-2"></i>University of Computer Science
             </div>
-            <a href="javascript:void(0)">Show more</a>
           </div>
         </div>
       </div>
