--- a/web_app/client/src/app/layouts/auth-layout/pages/register/register.component.html
+++ b/web_app/client/src/app/layouts/auth-layout/pages/register/register.component.html
@@ -21,22 +21,9 @@
   <div class="row justify-content-center">
     <div class="col-lg-6 col-md-8">
       <div class="card bg-secondary shadow border-0">
-        <div class="card-header bg-transparent pb-5">
-          <div class="text-muted text-center mt-2 mb-4"><small>Sign up with</small></div>
-          <div class="text-center">
-            <a href="javascript:void(0)" class="btn btn-neutral btn-icon mr-4">
-              <span class="btn-inner--icon"><img src="assets/img/icons/common/facebook.svg"></span>
-              <span class="btn-inner--text">Facebook</span>
-            </a>
-            <a href="javascript:void(0)" class="btn btn-neutral btn-icon">
-              <span class="btn-inner--icon"><img src="assets/img/icons/common/google.svg"></span>
-              <span class="btn-inner--text">Google</span>
-            </a>
-          </div>
-        </div>
         <div class="card-body px-lg-5 py-lg-5">
           <div class="text-center text-muted mb-4">
-            <small>Or sign up with credentials</small>
+            <small>Sign up with credentials</small>
           </div>
           <form role="form" (ngSubmit)="register(registerForm)" #registerForm="ngForm">
             <div class="form-group">
