--- a/web_app/client/src/app/layouts/admin-layout/pages/users/users.component.html
+++ b/web_app/client/src/app/layouts/admin-layout/pages/users/users.component.html
@@ -8,8 +8,8 @@
     <div class="row">
       <div class="col">
         <div class="card shadow">
-          <div class="card-header border-0">
-            <h3 class="mb-0">Applications Users</h3>
+          <div class="card-header border-0" style="text-align: center;">
+            <h3 class="mb-0">APPLICATION USERS</h3>
           </div>
           <div class="table-responsive">
             <table class="table align-items-center table-flush">
@@ -25,7 +25,7 @@
               </tr>
               </thead>
               <tbody *ngIf="users">
-              <tr *ngFor="let user of users">
+              <tr *ngFor="let user of users_in_current_page">
                 <td>
                   {{user._id}}
                 </td>
