--- a/web_app/client/src/app/layouts/auth-layout/pages/login/login.component.html
+++ b/web_app/client/src/app/layouts/auth-layout/pages/login/login.component.html
@@ -59,12 +59,9 @@
           </form>
         </div>
       </div>
-      <div class="row mt-3">
-        <div class="col-6 text-right">
+      <div class="row justify-content-center">
+        <div class="col-6 text-center">
           <a [routerLink]="'/auth/register'" class="text-light"><small>Create new account</small></a>
-        </div>
-        <div class="col-6 text-left">
-          <a [routerLink]="'/recover/email'" class="text-light"><small>Forgot password?</small></a>
         </div>
       </div>
     </div>
